Fixed compilation error and made code JDK 1.4 compatible
git-svn-id: file:///svn/branches/amp-bolivia-nov06@966 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4